<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Chris Banes
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<app.philm.in.view.MovieDetailCardLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:internal="http://schemas.android.com/apk/res-auto"
        android:id="@+id/movie_detail_card_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        internal:title="@string/details">

    <app.philm.in.view.MovieDetailInfoLayout
            android:id="@+id/layout_info_released"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            android:visibility="gone"
            internal:title="@string/movie_details_released"/>

    <app.philm.in.view.MovieDetailInfoLayout
            android:id="@+id/layout_info_runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            android:visibility="gone"
            internal:title="@string/movie_details_runtime"/>

    <app.philm.in.view.MovieDetailInfoLayout
            android:id="@+id/layout_info_certification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            android:visibility="gone"
            internal:title="@string/movie_details_certification"/>

    <app.philm.in.view.MovieDetailInfoLayout
            android:id="@+id/layout_info_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            android:visibility="gone"
            internal:title="@string/movie_details_genres"/>

    <app.philm.in.view.MovieDetailInfoLayout
            android:id="@+id/layout_info_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            android:visibility="gone"
            internal:title="@string/movie_details_budget"/>

    <app.philm.in.view.MovieDetailInfoLayout
            android:id="@+id/layout_info_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            internal:title="@string/movie_details_language"/>

</app.philm.in.view.MovieDetailCardLayout>