<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:internal="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_minor"
            android:layout_marginBottom="@dimen/spacing_minor"
            android:background="#FF333333">

        <LinearLayout
                android:id="@+id/rating_left_bar"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

            <app.philm.in.view.FontTextView
                    android:id="@+id/textview_votes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Philm.Movie.Detail.Ratings.Votes"/>

            <app.philm.in.view.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_votes"
                    style="@style/Widget.Philm.Movie.Detail.Ratings.Title" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/rating_right_bar"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

            <app.philm.in.view.FontTextView
                    android:id="@+id/textview_global_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Philm.Movie.Detail.Ratings.Votes"/>

            <app.philm.in.view.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_global"
                    style="@style/Widget.Philm.Movie.Detail.Ratings.Title" />

        </LinearLayout>

    </LinearLayout>

    <app.philm.in.view.RatingCircleView
            android:id="@+id/rcv_rating"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            internal:backgroundCircleColor="#FFDDDDDD"
            internal:foregroundCircleColor="#FF669900"
            internal:arcColor="#FF99CC00"
            internal:textColor="#FF99CC00"
            internal:ratePrompt="@string/movie_detail_rate"
            internal:font="roboto_slab" />

</merge>